--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,12 +4,13 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 .clearfix {
   clear: both;
 }
 
 header {
-  margin-top: 15%;
+  margin-top: 9%;
   height: 50px;
   background-color: rebeccapurple;
   height: 100%;
@@ -27,6 +28,7 @@ body {
   background-repeat: repeat-x;
 
 
+
 }
 
 #container {
@@ -37,29 +39,73 @@ body {
 #mobiles {
   display:block;
   float: left;
-  height: 300px;
+  height: 100%;
   width: 40%;
   background-color: red;
+  text-align: center;
 }
 
-#text {
+#derecha {
   display:block;
   float: left;
   width: 60%;
   height: 100%;
   background-color: green;
+
 }
 
 footer {
   width: 100%;
   background-color: yellowgreen;
+  text-align: center;
 }
 
 footer li {
-  float: left;
+  
+  display: inline-block;
 }
 
 .apps {
   height: 100%;
-  margin-top: 10%;
+  margin: 10% 0% 0% 8%;
+  
 }
+
+.apps img {
+  margin-right: 20px;
+}
+
+.logo {
+  float:left;
+  display: flex;
+}
+
+.home {
+  float: right;
+  height: 25px;
+}
+
+.botones {
+  display: flex;
+}
+
+.texto {
+  height: 100%;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  margin: 50px 20px 20px 30px;
+}
+
+.texto h2 {
+  padding: 23px 0px 0px 33px;
+}
+
+.texto p {
+  margin: 28px 15% 10px 34px;
+  
+}
+
+.negrita {
+  font-weight: 400;
+ }
+
