--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,141 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+}
 
-body {
+html, body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  height: 90%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-size: initial;
+
+}
+
+h3 {
+  color: #06365f;
+  font-size: 1.5em;
+  font-weight: 500;
+  width: 240px
+}
+p {
+  font-size: 0.9em;
+  font-weight: 400;
+  color: #38393a;
+}
+
+footer {
+  margin: 0 auto;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align:center;
+}
+footer ul {
+  list-style-type: none;
+  text-align: center;
+
+}
+footer li {
+  display: inline-block;
+  color: #1c5380;
+}
+.copyright {
+  color: grey;
+}
+.main {
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 70%;
+  height: 100%;
+
+}
+.wrapper {
+  margin-top: 10%;
+  width: 100%;
+  height: 80%;
+  margin: 10% auto 0 auto;
+}
+.description {
+  box-sizing: border-box;
+  background-image: url("../images/frame.png");
+  background-position: center;
+  background-size: cover;
+  border-radius: 15px;
+  height: 250px;
+  padding: 30px 40px 20px 40px;
+}
+.description ul {
+  position: relative;
+  bottom: 0px;
+  list-style-type: none;
+  padding: 20px auto 0px 10px;
+  -webkit-padding-start: 0px;
+  -webkit-margin-before: 2.5em;
+}
+.description li {
+  display: inline-block;
+}
+.right {
+  float: left;
+  box-sizing: border-box;
+  min-height: 260px;
+  margin: 20px auto;
+  padding: 20px;
+  width: 60%;
+  height: 100%;
+}
+
+.left {
+  float: left;
+  box-sizing: border-box;
+  width: 40%;
+  margin: 0 auto;
+
+}
+
+.logos {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+}
+/* .logos a{
+  box-sizing: border-box;
+  border: 2px solid black ;
+  border-radius: 15px;
+  background-color: #1c5380;
+  width: 30px;
+  text-align: center;
+  vertical-align: middle;
+} */
+
+.clearfix {
+  clear: both;
+}
+
+.logos a {
+  background-color:#1c5380;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 300;
+  text-decoration: none;
+  height: auto;
+  width: 50px;
+  margin: 0 auto;
+  padding: 10px 10px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  vertical-align: -webkit-baseline-middle;
+}
+
+.items{
+  float: left; 
+  width: 50%;
+  align-items: center;
 }
