--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,70 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0;  
 }
+.col-a{  
+  float: left;  
+  width: 50%;  
+  box-sizing: border-box;
+  padding-top: 100px;
+  padding-left: 300px;
+}
+.col-b{  
+  float: left;  
+  width: 50%;  
+  box-sizing: border-box;
+  padding-top: 100px;
+  padding-right: 300px;
+}
+.boton{
+  color: #06365f;  
+  display: inline-block;
+  width: 30px; 
+  border: 1px solid rgb(179, 179, 179);
+  vertical-align: top;
+  
+  }
+
+.container{
+  position: fixed;
+  float: left;
+  margin-top: 10vh;  
+  width: 100%;
+}
+.clearfix{
+  clear: both; 
+  }
+  .phone{
+    width: 300px;
+    height: auto;
+  }
+  .back{
+    position: absolute;
+    background-image: url("../images/bgtile.png");
+    background-repeat: repeat-x;
+    width: 100%;
+    height: 30vh;
+  }
+  .logo{
+    display: inline-block;
+    text-align: center;
+  }
+  .container-wrap{
+    background-color: white;
+  }
+  .botones{
+    display: inline;
+  }    
+  .links{
+    display: block;    
+    text-align: center;
+    margin-top: 600px;   
+    
+  }
+  .links li{
+    display: inline-block;
+    text-align: center;
+    color: #06365f;
+    
+  }
