--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,90 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin:0;
+  padding:0;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size:16px;
+}
+.general{
+  background-image: url("../images/bgtile.png");
+  background-size: 100%;
+  height: 300px;
+}
+.img-movil{
+  float: left;
+  margin: 110px 0 0 120px;
+  box-sizing: border-box;
+}
+.column-2{
+  float: left;
+  width: 40%;
+  margin: 110px 0 0 60px;
+}
+.logo{
+  float: left;
+}
+.button {
+  float: left;
+  width: 80px;
+  height: 40px;
+  background-color: #1c5380;
+  color: #ffff;
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  margin-left:90px;
+  margin-top: 15px;
+}
+.button::before{
+  content: url("../images/home.png");
+  display: inline;
+  vertical-align: middle;
+  padding: 0 5px;
+}
+
+.texto{
+  height: 430px;
+  background-image: url("../images/frame.png");
+  background-repeat: repeat-x;
+  background-size: 100%;
+}
+.context-texto{
+  margin-left: 30px;
+}
+.texto h2{
+  padding-top: 40px;
+  color:#06365f;
+}
+.texto p{
+  padding: 15px 0;
+  color:black;
+}
+.texto-down{
+  margin-top:40px;
+  margin-left: 30px;
+}
+.image-app{
+  padding-right: 15px;
+}
+.clearfix{
+  clear: both;
+}
+.list-footer{
+  color: #1c5380;
+  text-transform: uppercase;
+  text-decoration-style: none;
+}
+.footer{
+  margin-top: 50px;
+  text-align: center;
+}
+.list-li{
+  display: inline-block;
+  padding: 0 5px;
+}
+.color{
+  color:grey;
 }
