--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,4 +8,86 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
-head
+.back {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+.first-div{
+  float: left;
+  width: 40%;
+
+}
+
+.second-div{
+  float: right;
+  width: 40%;
+}
+
+.clearfix {
+  clear: both;
+}
+.texture {
+  background-image: url("../images/frame.png");
+  background-size: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  padding: 25px 25px;
+}
+.centrar {
+  margin: 100px auto;
+  width: 80%;
+
+}
+.button {
+  display: inline-block;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  background-color: #1c5380;
+  color: #fff;
+  font-family: 'Roboto Condensed';
+  padding: 5px 7px;
+  text-align: center;
+  text-decoration: none;
+  width: 80px;
+  vertical-align: middle; 
+  margin-left: 60px;
+
+}
+.logo{
+  width:59%;
+  vertical-align: middle; 
+
+}
+
+ .home {
+  vertical-align: middle; 
+  margin-left: 0px;
+
+ }
+ h2 {
+   color: #06365f;
+ }
+ .text {
+   display: inline;
+   margin-left: 10px;
+ }
+
+.final {
+  margin-left: 250px;
+  margin-top: 50px;
+}
+.top-links {
+  display: inline-block;
+  padding: 0;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+.top-links li {
+  display: inline-block;
+  margin: 0 10px;
+  color: #1c5380;
+  font-weight: bold;
+}
+.app {
+  width:40%;
+  display: inline-block;
+}
