--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,102 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.back {
+  background-image: url(../images/bgtile.png);
+  background-size: cover;
+  height: 300px;
+}
+.logo {
+
+  position: absolute;
+  
+  height: 50px;
+  width: 345px;
+  top: 125px; 
+  left: 510px;
+
+}
+.movil{
+  background-image: url(../images/phones.png);
+  background-size: 100%;
+  height: 550px;
+  width: 345px;
+  position: absolute;
+  top: 100px; 
+  left: 80px;
+}
+.cuadro-central{
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-style: none;
+  background-image: url(../images/frame.png);
+  background-size: 600px 400px;
+  height: 400px;
+  width: 600px;
+  position: absolute;
+  top: 210px; 
+  left: 500px;
+}
+.texto-central{
+  
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  left: 600px;
+  top: 30px;
+  
+}
+.boton-log{
+  background-color: #06365f;
+  position: absolute;
+  top: 155px; 
+  left: 900px;
+}
+.app-store{
+  float: left;
+  position: relative;
+  top: 290px; 
+  left: 600px;
+
+}
+.google-play{
+  float: left;
+  position: relative;
+  top: 290px; 
+  left: 620px;
+
+}
+.downer{
+position: relative;
+text-align: center;
+top:420px;
+left: -200px;
+}
+.footer{
+  position: relative;
+text-align: center;
+top:395px;
+left: 100px;
+}
+h2{
+  position: relative;
+  color:#06365f;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  left: 45px;
+  top: 20px;
+}
+h1{
+
+}
+h3{
+  margin: 0 auto;
+  padding: 0;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 85%;
+}
+h4{
+  color:#1c5380;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
