--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,70 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100;
+  height: 500px;
+}
+
+.fondo1 {
+  background-image: url(../images/bgtile.png);
+  background-size: cover; 
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 100%;
+  position: absolute; 
+}
+
+.fondo2 {
+  width: 100%;
+  position: absolute; 
+}
+
+.container {
+  margin:auto;
+  height:800px;
+  width:80%; 
+  position:absolute;
+  left: 10%; 
+  top: 130px; 
+}
+
+.left {
+  float: left;
+  width: 50%;
+  margin: 0 auto;
+  height: 400px;
+  box-sizing: border-box;
+}
+
+.right {
+  float: left;
+  width: 50%;
+  margin: 0 auto;
+  height: 400px;
+  background-image: url(../images/frame.png);
+  background-size: cover; 
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+}
+
+.phones {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  right: 50px
+}
+.clear {
+  clear: both;
+}
+
+.footer {
+  position: absolute;
+  top: 550px;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.inline li{
+  display: inline-block;
 }
