--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,15 +7,13 @@ light blue: #1c5380
   margin: 0;
 }
 
-html, body {
+body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   width: 100%;
   height: 90%;
   background-image: url("../images/bgtile.png");
   background-repeat: repeat-x;
-  background-size: initial;
-
 }
 
 h3 {
@@ -31,7 +29,7 @@ p {
 }
 
 footer {
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   color: #1c5380;
   text-transform: uppercase;
   font-weight: 500;
@@ -143,8 +141,8 @@ footer li {
 }
 
 .items{
-  float: left; 
-  width: 40%;
+  float: left;
+  width: 60%;
   align-items: center;
 }
 .items2{
